--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -84,7 +84,7 @@ const posts = (await getCollection("blog")).sort(
 	</head>
 	<body>
 		<Header />
-		<main class="container">
+		<main>
 			<section>
 				<ul>
 					{
