--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import { ViewTransitions } from "astro:transitions";
 	</head>
 	<body>
 		<Header title={SITE_TITLE} />
-		<main class="container">
+		<main>
 			<h1>Hello, Astronaut!</h1>
 			<p>
 				Welcome to the official <a href="https://astro.build/">Astro</a> blog
