--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,8 +3,8 @@
 	--text-main: #36393b;
 	--text-secondary: #6b6f72;
 	--primary-color: #548e9b;
-	--font-family-serif: Merriweather, serif;
-	--font-family-sans: 'Fira Sans', sans-serif;
+	--ff-serif: Merriweather, serif;
+	--ff-sans: 'Fira Sans', sans-serif;
 }
 
 :root.theme-dark {
@@ -22,7 +22,7 @@
 
 body {
 	margin: 0;
-	font-family: var(--font-family-serif);
+	font-family: var(--ff-sans);
 	font-size: 16px;
 	line-height: 1.6;
 	background-color: var(--background-body);
@@ -43,29 +43,29 @@ h6 {
 
 h1 {
 	font-family: var(--font-family-serif);
-	font-size: 4em;
+	font-size: 4rem;
 	margin: 0 0 1em 0;
 }
 
 h2 {
 	margin: 1.6em 0 0 0;
-	font-size: 1.8em;
+	font-size: 1.8rem;
 }
 
 h3 {
-	font-size: 1.5em;
+	font-size: 1.5rem;
 }
 
 h4 {
-	font-size: 1.4em;
+	font-size: 1.4rem;
 }
 
 h5 {
-	font-size: 1.3em;
+	font-size: 1.3rem;
 }
 
 h6 {
-	font-size: 1.2em;
+	font-size: 1.2rem;
 }
 
 p,
@@ -148,7 +148,7 @@ pre code {
 
 blockquote {
 	border-left: 4px solid #cccccc;
-	font-size: 1.4em;
+	font-size: 1.4rem;
 	font-style: italic;
 	margin: 2rem 0;
 	padding-left: 2rem;
@@ -178,7 +178,7 @@ figure {
 table {
 	border-collapse: collapse;
 	font-family: var(--font-family-sans);
-	font-size: 1.125em;
+	font-size: 1.125rem;
 	margin: 2em 0;
 }
 
@@ -191,10 +191,11 @@ td {
 	padding: 0.4em 0.8em;
 }
 
-.container {
+main {
 	margin: 0 auto;
-	max-width: 42em;
+	max-width: 60em;
 	width: 100%;
+	padding: 4em 2em;
 }
 
 .content h1 {
@@ -246,11 +247,11 @@ input[name='theme-toggle'] {
 
 @media (max-width: 1020px) {
 	h1 {
-		font-size: 3em;
+		font-size: 3rem;
 	}
 
 	.content h1 {
-		font-size: 2.4em;
+		font-size: 2.4rem;
 	}
 }
 
