--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,5 +1,6 @@
 ---
 import type { CollectionEntry } from "astro:content";
+import { Image } from 'astro:assets';
 import BaseHead from "../components/BaseHead.astro";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
@@ -56,7 +57,12 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 				<div class="hero-image">
 					{
 						heroImage && (
-							<img width={1020} height={510} src={heroImage} alt="" />
+						<Image 
+							width={1020} 
+							height={510} 
+							src={heroImage}
+							alt="monkey"
+						/>
 						)
 					}
 				</div>
