--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -96,7 +96,7 @@ const posts = (await getCollection("blog")).sort(
 										width={720}
 										height={360}
 										src={post.data.heroImage}
-										alt=""
+										alt="Hero Image"
 									/>
 									<h2 class="title">{post.data.title}</h2>
 									<p class="date">
