can't have defer here

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -46,6 +46,6 @@ const { title, description, image = "/blog-placeholder-1.jpg" } = Astro.props;
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link defer href="https://fonts.googleapis.com/css2?family=Barlow:wght@300;400;500;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300;400;500;700&display=swap" rel="stylesheet">
 
 <ViewTransitions />
