--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -21,7 +21,7 @@ import { SITE_TITLE } from "../consts";
 	}
 	h2 {
 		margin: 0;
-		font-size: 1.6em;
+		font-size: 1.6rem;
 	}
 
 	h2 a,
@@ -32,10 +32,10 @@ import { SITE_TITLE } from "../consts";
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
-		padding: 1em 2em;
+		padding: 1rem 2rem;
 	}
 	nav a {
-		padding: 1.5em 0.5em 1em;
+		padding: 1.5rem 0.5rem 1rem;
 		color: var(--black);
 		border-bottom: 4px solid transparent;
 		text-decoration: none;
@@ -54,7 +54,7 @@ import { SITE_TITLE } from "../consts";
 			max-width: 1400px;
 			margin: 0 auto;
 			width: 100%;
-			padding: 2em;
+			padding: 1.5rem 2rem;
 		}
 	}
 </style>
